--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="btc.ico" type="image/x-icon">
     <meta property="og:title" content="Analytics for Futures Trade">
     <meta property="og:description" content="Get real-time insights and trends for futures trading.">
-    <meta property="og:image" content="https://b.top4top.io/p_3291jui7m1.jpg">
+    <meta property="og:image" content="https://github.com/DarkSkull777/analytics-futures/blob/main/trading.jpg">
     <meta property="og:url" content="https://darkskull777.github.io/analytics-futures">
     <meta property="og:type" content="website">
     <title>Analytics for Futures Trade</title>
